[tesla] Removed dependency on org.apache.commons (#9815)
* Removed dependency on org.apache.commons

Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>